# ThorV4

./: .gitignore  AGENTS.md  CMakeLists.txt  FullWCMem.txt  Prompt.txt
Config/: .jwt_secret  Agent.json
Config/AgentKeys/ATM100V2/: symmetric.key
Config/Components/Aligners/: PRE-200.json
Config/Components/Cassettes/: FOUP25_200mm.json
Config/Components/Controllers/: Galil_DMC8240.json
Config/Components/CycleCounters/: CycleCounter_Default.json
Config/Components/EndEffectors/: EE_Horseshoe_200mm.json
Config/Components/Flippers/: Flipper_Standard.json
Config/Components/ProcessZones/: GenericChamber.json
Config/Components/Robots/: ATM100V2.json
Config/Components/SignalTowers/: PATLITE-LR6-3.json
Config/Components/Tracks/: Track_600mm.json
Config/Plugins/: driver_galil8240.json  kinematics_atm100.json
Config/Profiles/: galil8240_default.json
Config/Schemas/: component_common.schema.json  workcell.schema.json
Config/Scripts/: MyScript.lua  startup.lua
Config/WorkCells/: WorkCell.json
Docs/Analysis/: V4.md
Docs/Reports/: JSON.md
Include/Agent/: Agent.h  Database.h  Workcell.h
Include/Agent/Components/: Aligner.h  Cassette.h  Component.h  Controller.h  CycleCounter.h  EndEffector.h  Flipper.h  ProcessZone.h  Robot.h  SignalTower.h  Track.h
Include/Agent/Drivers/: GalilDriver.h  GalilProtocol.h
Include/Agent/Kinematics/: DHKinematics.h
Include/Agent/Scripting/: LuaEngine.h
Include/Core/: EventBus.h
Src/Agent/: Agent.cpp  Database.cpp  ThorAgent.cpp  Workcell.cpp
Src/Agent/Components/: Aligner.cpp  Cassette.cpp  Component.cpp  Controller.cpp  CycleCounter.cpp  EndEffector.cpp  Flipper.cpp  ProcessZone.cpp  Robot.cpp  SignalTower.cpp  Track.cpp
Src/Agent/Drivers/: GalilDriver.cpp  GalilProtocol.cpp
Src/Agent/Kinematics/: DHKinematics.cpp
Src/Agent/Scripting/: LuaEngine.cpp
Src/Core/: EventBus.cpp
Src/Tests/: TestDHKinematics.cpp  TestEventBus.cpp  TestGalilDriver.cpp  TestGalilProtocol.cpp  TestLuaEngine.cpp
